[workspace]
resolver = "2"
members = [
  "net_prowler_scanner",
  "net_prowler_cli"]

[workspace.dependencies]
cidr = "0.2.2"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
itertools = "0.13.0"
socket2 = "0.5.7"
etherparse = "0.15"
pnet = "0.35.0"
pnet_base = "0.35.0"
pnet_datalink = "0.35.0"
pnet_packet = "0.35.0"
pnet_transport = "0.35.0"
rand = "0.8.5"