[package]
name = "net_prowler_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
cidr.workspace = true
tokio.workspace = true
futures.workspace = true
itertools.workspace = true
socket2.workspace = true
etherparse.workspace = true
pnet.workspace = true
pnet_base.workspace = true
pnet_datalink.workspace = true
pnet_packet.workspace = true
pnet_transport.workspace = true
rand.workspace = true